# sum_of_two

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
src/kalymbet_new/: __init__.py  main.py
tests/: test_sum_of_two.py
